[metadata]
name             = udiskie
version          = attr: udiskie.__version__
description      = Removable disk automounter for udisks
url              = https://github.com/coldfix/udiskie
long_description = file: README.rst, CHANGES.rst
author           = Byron Clark
author_email     = byron@theclarkfamily.name
maintainer       = Thomas Gläßle
maintainer_email = t_glaessle@gmx.de
license          = MIT
license_file     = COPYING
classifiers      =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: X11 Applications :: GTK
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Topic :: Desktop Environment
    Topic :: Software Development
    Topic :: System :: Filesystems
    Topic :: System :: Hardware
    Topic :: Utilities
long_description_content_type = text/x-rst

[options]
packages = udiskie
zip_safe = true
include_package_data = true
python_requires = >=3.5
install_requires =
    PyYAML
    docopt
    importlib_resources;python_version<'3.7'
    PyGObject

[options.extras_require]
password-cache =
    keyutils==0.3

[options.entry_points]
console_scripts =
    udiskie = udiskie.cli:Daemon.main
    udiskie-mount = udiskie.cli:Mount.main
    udiskie-umount = udiskie.cli:Umount.main
    udiskie-info = udiskie.cli:Info.main

[flake8]
# codes: https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# default: ignore = E121,E123,E126,E133,E226,E241,E242,E704,W503,W504,W505
ignore = E126,E221,E226,E241,E731,E741,W503,W504
max-line-length = 84
max-complexity = 12
exclude = docs,.git,build,__pycache__,dist,hit_models
